--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<h1 class="title">Thermowell Design</h1>
 
-	<!-- <div id='custom-modal' class='modal fade' role='dialog'>
+	<div id='custom-modal' class='modal fade' role='dialog'>
 		<div class='modal-dialog'>
 			<div class='modal-content'>
 				<div class='modal-body'>
@@ -55,7 +55,7 @@
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 
 	<div class="container m-top-30">
 		<form id="formEmail">
@@ -172,7 +172,7 @@
 				<h6>Frequency Ratio: <span id="frequencyRatio"></span></h6>
 			</div>
 
-			<div class="col-sm-4">
+			<div class="col-sm-7">
 				<h6>STEADY-STATE STRESS CALCULATION: <span id="sssc"></span></h6>
 				<h6>Von Mises Stress: <span id="vonMisesStress"></span></h6>
 				<h6>Stress Limit: <span id="stressLimit1"></span></h6>
@@ -213,11 +213,11 @@
 
 	<script src="assets/js/controller.js"></script>
 
-	<!-- <script>
+	<script>
 		$(document).ready(() => {
 			$('#custom-modal').hide();
 		});
-	</script> -->
+	</script>
 
 	<script>
 		$('#selectType').change(() => {
