--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 			</div>
 
 			<div class="col-sm-4 text-right">
-				<img src="assets/images/logo.jpg" alt="Logo ITEC">
+				<img src="assets/images/logo.png" width="35%" alt="Logo ITEC">
 			</div>
 
 		</div>
