add new kind of metal

--- a/index.html
+++ b/index.html
@@ -60,26 +60,40 @@
 	<div class="container m-top-30">
 		<form id="formEmail">
 			<fieldset class="form-group">
-				<div class="col-sm-10">
-					<div class="form-check">
-						<input class="form-check-input" type="radio" name="gridRadios" id="316" value="316">
-						<label class="form-check-label" for="gridRadios1">
-							316
-						</label>
+				<div class="row justify-content-center align-items-center">
+					<div class="col-sm-4">
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="gridRadios" id="316" value="316">
+							<label class="form-check-label" for="gridRadios1">
+								316
+							</label>
+						</div>
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="gridRadios" id="316L" value="316L">
+							<label class="form-check-label" for="gridRadios2">
+								316L
+							</label>
+						</div>
 					</div>
-					<div class="form-check">
-						<input class="form-check-input" type="radio" name="gridRadios" id="316L" value="316L">
-						<label class="form-check-label" for="gridRadios2">
-							316L
-						</label>
+					<div class="col-sm-4">
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="gridRadios" id="F51" value="F51">
+							<label class="form-check-label" for="gridRadios3">
+								F51
+							</label>
+						</div>
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="gridRadios" id="F53" value="F53">
+							<label class="form-check-label" for="gridRadios4">
+								F53
+							</label>
+						</div>
 					</div>
+					<div class="col-sm-4"></div>
 				</div>
 			</fieldset>
-
 			<div class="row">
-
 				<div class="col-md-4">
-
 					<div class="form-group">
 						<select id="selectType" name="typeThermowell" class="form-control">
 							<option value="">-- Seleziona il tipo --</option>
