--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@
 							</label>
 						</div>
 					</div>
-					<div class="col-sm-4"></div>
+					<div class="col-sm-4">
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="gridRadios" id="in625" value="in625">
+							<label class="form-check-label" for="gridRadios5">
+								IN-625
+							</label>
+						</div>
+					</div>
 				</div>
 			</fieldset>
 			<div class="row">
